--- a/index.html
+++ b/index.html
@@ -3,8 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-</head>
-<body>
 
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css">
+  <link rel="stylesheet" href="style/css/main.css"/>
+</head>
+<body class="container">
+<section>
+  <h2>Входные данные</h2>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="form-group">
+        <label for="inputData">Выходные данные</label>
+        <textarea class="form-control" id="inputData" rows="15">
+        34.1
+        36.3
+        46.1
+        44.3
+        43.4
+        46.5
+        45.8
+        46.2
+        45.3
+        44.7
+        43.3
+        38.9
+        40.4
+        48.2
+      </textarea>
+      </div>
+      <div class="form-group">
+        <label for="precision">Количество знаков после запятой</label>
+        <input type="number" class="form-control" id="precision" value="2">
+      </div>
+      <div class="form-group">
+        <label for="forecastCount">Количество уровней для прогноза</label>
+        <input type="number" class="form-control" id="forecastCount" value="3">
+      </div>
+      <button id="launchAppButton" class="btn btn-primary">Рассчитать</button>
+    </div>
+    <div class="col-md-9">
+      <h2>График</h2>
+      <div class="ct-chart ct-perfect-fourth" id="inputDataChart"></div>
+    </div>
+  </div>
+</section>
+<section>
+  <h2>Основные показатели динамики временного ряда</h2>
+  <table class="table table-striped table-hover">
+    <thead>
+    <tr>
+      <th rowspan="2">t</th>
+      <th rowspan="2">y(t)</th>
+      <th colspan="2">Абсолютный прирост</th>
+      <th colspan="2">Темп роста</th>
+      <th colspan="2">Темп прироста</th>
+    </tr>
+    <tr>
+      <th>Цепной</th>
+      <th>Базисные</th>
+      <th>Цепной</th>
+      <th>Базисные</th>
+      <th>Цепной</th>
+      <th>Базисные</th>
+    </tr>
+    </thead>
+    <tbody id="mainIndicatorsOfTheDynamic"></tbody>
+  </table>
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Сводная информация</h3>
+      <ul class="total-information-list">
+        <li>
+          Количество уровней ряда: <span id="dataLength" class="value"></span>
+        </li>
+        <li>
+          Средний прирост: <span id="averageIncrease" class="value"></span>
+        </li>
+        <li>
+          Средний темп роста: <span id="averageGrowthRate" class="value"></span>
+        </li>
+        <li>
+          Средний темп прироста: <span id="averageUpGrowthRate" class="value"></span>
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      <h3>Прогноз</h3>
+      <table class="table table-hover table-striped">
+        <thead>
+        <tr>
+          <th rowspan="2">t</th>
+          <th colspan="2">На основании </th>
+        </tr>
+        <tr>
+          <th>среднего прироста</th>
+          <th>среднего темпа роста</th>
+        </tr>
+        </thead>
+        <tbody id="forecastTable"></tbody>
+      </table>
+    </div>
+  </div>
+</section>
+<footer>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/chartist/dist/chartist.min.js"></script>
+  <script src="js/array.js"></script>
+  <script src="js/stat.js"></script>
+  <script src="js/chart.js"></script>
+  <script src="js/table.js"></script>
+  <script src="js/main.js"></script>
+</footer>
 </body>
 </html>
