--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="style/css/main.css"/>
 </head>
 <body class="container">
-<section>
-  <h2>Входные данные</h2>
+<h1>Анализ и прогнозирование временных рядов</h1>
+<section class="section">
   <div class="row">
     <div class="col-md-3">
       <div class="form-group">
-        <label for="inputData">Выходные данные</label>
+        <label for="inputData">Входные данные</label>
         <textarea class="form-control" id="inputData" rows="15">
         34.1
         36.3
@@ -40,13 +40,19 @@
         <label for="forecastCount">Количество уровней для прогноза</label>
         <input type="number" class="form-control" id="forecastCount" value="3">
       </div>
-      <button id="launchAppButton" class="btn btn-primary">Рассчитать</button>
+      <div class="text-center">
+        <button id="launchAppButton" class="btn btn-primary btn-block">Рассчитать</button>
+      </div>
     </div>
     <div class="col-md-9">
-      <h2>График</h2>
+      <h2>График исходного временного ряда</h2>
       <div class="ct-chart ct-perfect-fourth" id="inputDataChart"></div>
     </div>
   </div>
+</section>
+<section class="section">
+  <h2>Проверка на наличие аномальных уровненей временного ряда методом Ирвина</h2>
+
 </section>
 <section>
   <h2>Основные показатели динамики временного ряда</h2>
@@ -103,6 +109,120 @@
         </thead>
         <tbody id="forecastTable"></tbody>
       </table>
+    </div>
+  </div>
+</section>
+<section>
+  <h2>Проверка наличия тренда</h2>
+  <h3>Метод серий</h3>
+  <table class="table table-striped table-hover">
+    <thead>
+    <tr>
+      <th>t</th>
+      <th>y(t)</th>
+      <th>Знак</th>
+    </tr>
+    </thead>
+    <tbody id="signArrayTable"></tbody>
+  </table>
+  <ul class="total-information-list">
+    <li>Медиана: <span class="value" id="mediana"></span></li>
+    <li>Кол-во серий: <span class="value" id="seriesCount"></span></li>
+    <li>Максимальная длина серии: <span class="value" id="maxSeriesLength"></span></li>
+    <li>Крит. макс. длина серий: <span class="value" id="maxSeriesCriterion"></span></li>
+    <li>Крит мин кол-во серий: <span class="value" id="minSeriesCount"></span></li>
+    <li>Вывод: <span class="value" id="medianMethodReview"></span></li>
+  </ul>
+</section>
+<section>
+  <h2>Построение моделей</h2>
+  <h3>Линейная нецентрированная</h3>
+  <div class="row">
+    <div class="col-md-4">
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr>
+            <th>t</th>
+            <th>y(t)</th>
+            <th>y(t) * t</th>
+            <th>t^t</th>
+          </tr>
+        </thead>
+        <tbody id="linearNonCenteredModelData"></tbody>
+      </table>
+      <ul>
+        <li>Сумма t: <span class="value" id="linearNonCenteredModelTSum"></span></li>
+        <li>Сумма y(t): <span class="value" id="linearNonCenteredModelYOfTSum"></span></li>
+        <li>Сумма y(t) * t: <span class="value" id="linearNonCenteredModelYOfTonTSum"></span></li>
+        <li>Сумма t^t: <span class="value" id="linearNonCenteredModelTOnTSum"></span></li>
+        <li>a1: <span class="value" id="linearNonCenteredModelA1"></span></li>
+        <li>a: <span class="value" id="linearNonCenteredModelA0"></span></li>
+        <li>Линейная модель: <span class="value" id="linearNonCenteredModel"></span></li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      <div class="ct-chart ct-perfect-fourth" id="linearNonCenteredModelChart"></div>
+    </div>
+  </div>
+  <h3>Линейная центрированная</h3>
+  <div class="row">
+    <div class="col-md-4">
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr>
+            <th>t</th>
+            <th>y(t)</th>
+            <th>y(t) * t</th>
+            <th>t^t</th>
+          </tr>
+        </thead>
+        <tbody id="linearCenteredModelData"></tbody>
+      </table>
+      <ul>
+        <li>Сумма t: <span class="value" id="linearCenteredModelTSum"></span></li>
+        <li>Сумма y(t): <span class="value" id="linearCenteredModelYOfTSum"></span></li>
+        <li>Сумма y(t) * t: <span class="value" id="linearCenteredModelYOfTonTSum"></span></li>
+        <li>Сумма t^t: <span class="value" id="linearCenteredModelTOnTSum"></span></li>
+        <li>a1: <span class="value" id="linearCenteredModelA1"></span></li>
+        <li>a: <span class="value" id="linearCenteredModelA0"></span></li>
+        <li>Линейная модель: <span class="value" id="linearCenteredModel"></span></li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      <div class="ct-chart ct-perfect-fourth" id="linearCenteredModelChart"></div>
+    </div>
+  </div>
+  <h3>Параболическая модель</h3>
+  <div class="row">
+    <div class="col-md-4">
+      <table class="table table-hover table-striped">
+        <thead>
+          <tr>
+            <th>t</th>
+            <th>y(t)</th>
+            <th>y(t) * t</th>
+            <th>t^t</th>
+            <th>y(t) * t^t</th>
+            <th>t^4</th>
+          </tr>
+        </thead>
+        <tbody id="parabolicModelData"></tbody>
+      </table>
+      <ul>
+        <li>Сумма t: <span class="value" id="parabolicModelTSum"></span></li>
+        <li>Сумма y(t): <span class="value" id="parabolicModelYOfTSum"></span></li>
+        <li>Сумма y(t) * t: <span class="value" id="parabolicModelYOfTonTSum"></span></li>
+        <li>Сумма t^t: <span class="value" id="parabolicModelTOnTSum"></span></li>
+        <li>Сумма y(t) * t^t: <span class="value" id="parabolicModelYofTonTOnTSum"></span></li>
+        <li>Сумма t^4: <span class="value" id="parabolicModelTIn4Sum"></span></li>
+        <li>a2: <span class="value" id="parabolicModelA2"></span></li>
+        <li>a1: <span class="value" id="parabolicModelA1"></span></li>
+        <li>a: <span class="value" id="parabolicModelA0"></span></li>
+        <li>Полиномиальная модель: <span class="value" id="parabolicModel2"></span></li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      <div class="ct-chart ct-perfect-fourth" id="parabolicModel2Chart"></div>
     </div>
   </div>
 </section>
