Update models interface

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
              aria-selected="true">Линейная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#parabolicModel" role="tab" aria-controls="profile"
+          <a class="nav-link update-chartist" data-func="ShowParabolicModel" data-toggle="tab" href="#parabolicModel" role="tab" aria-controls="profile"
              aria-selected="false">Параболическая</a>
         </li>
       </ul>
@@ -370,7 +370,7 @@
                  aria-selected="true">Центрированная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#linearNonCenteredModel" role="tab" aria-controls="profile"
+              <a class="nav-link update-chartist" data-func="ShowLinearNonCenteredModel" data-toggle="tab" href="#linearNonCenteredModel" role="tab" aria-controls="profile"
                  aria-selected="false">Нецентрированная</a>
             </li>
           </ul>
@@ -523,6 +523,7 @@
       <script src="bower_components/jquery/dist/jquery.min.js"></script>
       <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="bower_components/chartist/dist/chartist.min.js"></script>
+      <script src="js/util.js"></script>
       <script src="js/math.js"></script>
       <script src="js/array.js"></script>
       <script src="js/stat_const.js"></script>
