--- a/index.html
+++ b/index.html
@@ -15,20 +15,33 @@
         <div class="col-md-3">
           <div class="form-group">
             <label for="inputData">Входные данные</label> <textarea class="form-control" id="inputData" rows="15">
-        34.1
-        36.3
-        46.1
-        44.3
-        43.4
-        46.5
-        45.8
-        46.2
-        45.3
-        44.7
-        43.3
-        38.9
-        40.4
-        48.2
+4,7
+4,8
+4,8
+5,1
+3,9
+4,5
+3,5
+3,9
+3,2
+3,5
+1,7
+1,9
+1,2
+1,6
+1,2
+1,5
+0,8
+0,9
+1,4
+1,7
+2,3
+2,6
+2
+2,1
+1,7
+1,5
+1,8
       </textarea>
           </div>
           <div class="form-group">
@@ -269,7 +282,7 @@
           <a class="nav-link active" data-toggle="tab" href="#simpleSmoothing" role="tab" aria-controls="home"
              aria-selected="true">Простой</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item show-chart-button">
           <a class="nav-link" data-toggle="tab" href="#weightedSmoothing" role="tab" aria-controls="profile"
              aria-selected="false">Взвешенной</a>
         </li>
@@ -332,6 +345,20 @@
           </ul>
           <div class="tab-content">
             <div class="tab-pane fade show active" id="weightedSmoothingResult" role="tabpanel" aria-labelledby="home-tab">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>График простых скользящих средних g = 5</h3>
+                  <div class="ct-chart ct-perfect-fourth" id="weightedSmoothing5"></div>
+                </div>
+                <div class="col-md-6">
+                  <h3>График простых скользящих средних g = 7</h3>
+                  <div class="ct-chart ct-perfect-fourth" id="weightedSmoothing7"></div>
+                </div>
+                <div class="col-md-6 offset-md-3">
+                  <h3>График простых скользящих средних g = 9</h3>
+                  <div class="ct-chart ct-perfect-fourth" id="weightedSmoothing9"></div>
+                </div>
+              </div>
             </div>
             <div class="tab-pane fade" id="weightedSmoothingResultTable" role="tabpanel" aria-labelledby="profile-tab">
               <table class="table table-striped table-hover">
@@ -339,9 +366,9 @@
                   <tr>
                     <th>t</th>
                     <th>y(t)</th>
-                    <th>m</th>
-                    <th>l</th>
-                    <th>d</th>
+                    <th>g = 5</th>
+                    <th>g = 7</th>
+                    <th>g = 9</th>
                   </tr>
                 </thead>
                 <tbody id="weightedSmoothingResultTableBody"></tbody>
@@ -530,6 +557,9 @@
       <script src="js/stat.js"></script>
       <script src="js/chart.js"></script>
       <script src="js/table.js"></script>
+      <script src="js/models.js"></script>
+      <script src="js/smoothing.js"></script>
+      <script src="js/trend_research.js"></script>
       <script src="js/main.js"></script>
     </footer>
   </body>
