--- a/index.html
+++ b/index.html
@@ -48,36 +48,11 @@
         <div class="col-xl-2">
           <h3>Исходные данные</h3>
           <div class="form-group">
-            <label for="inputData" class="text-center d-block">Временной ряд</label> <textarea class="form-control"
-                                                                                               id="inputData" rows="15">
-              4,7
-              4,8
-              4,8
-              5,1
-              3,9
-              4,5
-              3,5
-              3,9
-              3,2
-              3,5
-              1,7
-              1,9
-              1,2
-              1,6
-              1,2
-              1,5
-              0,8
-              0,9
-              1,4
-              1,7
-              2,3
-              2,6
-              2
-              2,1
-              1,7
-              1,5
-              1,8
-      </textarea>
+            <label for="inputData" class="text-center d-block">Временной ряд</label>
+            <textarea class="form-control"
+                      id="inputData" rows="15">
+              17396.4	23687.7	31055.8	41576.3	47478.1	76909.3	97363.2	132703.4	162115.9	219053.4	237644.0	313899.3	355921.1	425301.7	437273.3	439392.8	402722.3	377882.2	420472.3
+            </textarea>
           </div>
           <div class="form-group">
             <label for="precision">Количество знаков после запятой</label> <input type="number" class="form-control"
@@ -111,25 +86,27 @@
       </ul>
       <div class="tab-content">
         <div class="tab-pane fade show active" id="irwinCheckingResult" role="tabpanel" aria-labelledby="home-tab">
-          <div class="row" id="correctedData" style="display: none">
+          <div class="row">
             <div class="col-md-3 info-block">
               <h3>Характеристики</h3>
               <ul class="info-list">
                 <li>Критерий ирвина при n = <span class="dataCount"></span>: <span id="irwinCriticalNumber"></span></li>
                 <li id="irwinCheckingResultMessage"></li>
               </ul>
-              <h3>Скорректированный временной ряд</h3>
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr>
-                    <th rowspan="2">t</th>
-                    <th rowspan="2">y(t)</th>
-                  </tr>
-                </thead>
-                <tbody id="correctedDataTable"></tbody>
-              </table>
+              <div class="corrected-data">
+                <h3>Скорректированный временной ряд</h3>
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th rowspan="2">t</th>
+                      <th rowspan="2">y(t)</th>
+                    </tr>
+                  </thead>
+                  <tbody id="correctedDataTable"></tbody>
+                </table>
+              </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 corrected-data">
               <h3>График скорректированного временного ряда</h3>
               <div class="ct-chart ct-perfect-fourth" id="correctedInputDataChart"></div>
             </div>
@@ -323,11 +300,13 @@
       <h2>Сглаживание методом скользящей средней</h2>
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingAverage" data-toggle="tab" href="#simpleSmoothing" role="tab" aria-controls="home"
+          <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingAverage" data-toggle="tab"
+             href="#simpleSmoothing" role="tab" aria-controls="home"
              aria-selected="true">Простой</a>
         </li>
         <li class="nav-item show-chart-button">
-          <a class="nav-link update-chartist" data-func="DoSmoothingByMovingWeightedAverage" data-toggle="tab" href="#weightedSmoothing" role="tab" aria-controls="profile"
+          <a class="nav-link update-chartist" data-func="DoSmoothingByMovingWeightedAverage" data-toggle="tab"
+             href="#weightedSmoothing" role="tab" aria-controls="profile"
              aria-selected="false">Взвешенной</a>
         </li>
       </ul>
@@ -335,7 +314,8 @@
         <div class="tab-pane fade show active" id="simpleSmoothing" role="tabpanel" aria-labelledby="home-tab">
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingAverage" data-toggle="tab" href="#simpleSmoothingResult" role="tab" aria-controls="home"
+              <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingAverage" data-toggle="tab"
+                 href="#simpleSmoothingResult" role="tab" aria-controls="home"
                  aria-selected="true">Результат</a>
             </li>
             <li class="nav-item">
@@ -354,7 +334,8 @@
                   <div id="researchOfTimeSeriesSS3">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult2" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult2" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -363,7 +344,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult2" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult2" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -434,7 +416,8 @@
                   <div id="researchOfTimeSeriesSS4">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult3" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult3" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -443,7 +426,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult3" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult3" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -515,7 +499,8 @@
                   <div id="researchOfTimeSeriesSS5">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult4" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult4" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -524,7 +509,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult4" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult4" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -611,7 +597,8 @@
         <div class="tab-pane fade" id="weightedSmoothing" role="tabpanel" aria-labelledby="profile-tab">
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingWeightedAverage" data-toggle="tab" href="#weightedSmoothingResult" role="tab"
+              <a class="nav-link active update-chartist" data-func="DoSmoothingByMovingWeightedAverage"
+                 data-toggle="tab" href="#weightedSmoothingResult" role="tab"
                  aria-controls="home"
                  aria-selected="true">Результат</a>
             </li>
@@ -633,7 +620,8 @@
                   <div id="researchOfTimeSeriesWS5">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult5" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult5" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -642,7 +630,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult5" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult5" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -715,7 +704,8 @@
                   <div id="researchOfTimeSeriesWS7">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult6" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult6" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -724,7 +714,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult6" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult6" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -797,7 +788,8 @@
                   <div id="researchOfTimeSeriesWS9">
                     <ul class="nav nav-tabs" role="tablist">
                       <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult7" role="tab" aria-controls="home"
+                        <a class="nav-link active" data-toggle="tab" href="#dataAnalysisResult7" role="tab"
+                           aria-controls="home"
                            aria-selected="true">Результат</a>
                       </li>
                       <li class="nav-item">
@@ -806,7 +798,8 @@
                       </li>
                     </ul>
                     <div class="tab-content">
-                      <div class="tab-pane fade show active" id="dataAnalysisResult7" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="tab-pane fade show active" id="dataAnalysisResult7" role="tabpanel"
+                           aria-labelledby="home-tab">
                         <div class="row">
                           <div class="col-md-3 info-block">
                             <h3>Характеристики</h3>
@@ -897,7 +890,7 @@
       <h2>Аналитические модели</h2>
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active update-chartist" data-func="ShowParabolicModel" data-toggle="tab"
+          <a class="nav-link active update-chartist" data-func="ShowLinearCenteredModel" data-toggle="tab"
              href="#linearModel" role="tab" aria-controls="home"
              aria-selected="true">Линейная</a>
         </li>
@@ -916,7 +909,7 @@
         <div class="tab-pane fade show active" id="linearModel" role="tabpanel" aria-labelledby="home-tab">
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active" data-toggle="tab" href="#linearCenteredModel" role="tab" aria-controls="home"
+              <a class="nav-link active update-chartist"  data-func="ShowLinearCenteredModel" data-toggle="tab" href="#linearCenteredModel" role="tab" aria-controls="home"
                  aria-selected="true">Центрированная</a>
             </li>
             <li class="nav-item">
@@ -956,6 +949,16 @@
                         <li>Ср. ошибка аппроксимации: <span class="value approximation-error"></span></li>
                         <li>Среднеквадр. ошибка: <span class="value rms-error"></span></li>
                       </ul>
+                      <h3>Прогноз</h3>
+                      <table class="table table-striped table-hover">
+                        <thead>
+                          <tr>
+                            <th>t</th>
+                            <th>y(t)</th>
+                          </tr>
+                        </thead>
+                        <tbody class="forecast"></tbody>
+                      </table>
                     </div>
                     <div class="col-md-8">
                       <div class="ct-chart ct-perfect-fourth model-chart"></div>
@@ -1008,7 +1011,17 @@
                         <li>Ср. абс. ошибка: <span class="value absolute-error"></span></li>
                         <li>Ср. ошибка аппроксимации: <span class="value approximation-error"></span></li>
                         <li>Среднеквадр. ошибка: <span class="value rms-error"></span></li>
-                       </ul>
+                      </ul>
+                      <h3>Прогноз</h3>
+                      <table class="table table-striped table-hover">
+                        <thead>
+                          <tr>
+                            <th>t</th>
+                            <th>y(t)</th>
+                          </tr>
+                        </thead>
+                        <tbody class="forecast"></tbody>
+                      </table>
                     </div>
                     <div class="col-md-8">
                       <div class="ct-chart ct-perfect-fourth model-chart"></div>
@@ -1017,17 +1030,19 @@
                 </div>
                 <div class="tab-pane fade" id="linearNonCenteredModelTable" role="tabpanel"
                      aria-labelledby="profile-tab">
-                  <table class="table table-striped table-hover">
-                    <thead>
-                      <tr>
-                        <th>t</th>
-                        <th>y(t)</th>
-                        <th>y(t)</th>
-                        <th>t^t</th>
-                      </tr>
-                    </thead>
-                    <tbody class="model-table-body"></tbody>
-                  </table>
+                  <div class="data-table-container">
+                    <table class="table table-striped table-hover">
+                      <thead>
+                        <tr>
+                          <th>t</th>
+                          <th>y(t)</th>
+                          <th>y(t)</th>
+                          <th>t^t</th>
+                        </tr>
+                      </thead>
+                      <tbody class="model-table-body"></tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1062,8 +1077,17 @@
                     <li>Ср. абс. ошибка: <span class="value absolute-error"></span></li>
                     <li>Ср. ошибка аппроксимации: <span class="value approximation-error"></span></li>
                     <li>Среднеквадр. ошибка: <span class="value rms-error"></span></li>
-
                   </ul>
+                  <h3>Прогноз</h3>
+                  <table class="table table-striped table-hover">
+                    <thead>
+                      <tr>
+                        <th>t</th>
+                        <th>y(t)</th>
+                      </tr>
+                    </thead>
+                    <tbody class="forecast"></tbody>
+                  </table>
                 </div>
                 <div class="col-md-8">
                   <div class="ct-chart ct-perfect-fourth model-chart"></div>
@@ -1119,6 +1143,16 @@
                     <li>Ср. ошибка аппроксимации: <span class="value approximation-error"></span></li>
                     <li>Среднеквадр. ошибка: <span class="value rms-error"></span></li>
                   </ul>
+                  <h3>Прогноз</h3>
+                  <table class="table table-striped table-hover">
+                    <thead>
+                      <tr>
+                        <th>t</th>
+                        <th>y(t)</th>
+                      </tr>
+                    </thead>
+                    <tbody class="forecast"></tbody>
+                  </table>
                 </div>
                 <div class="col-md-8">
                   <div class="ct-chart ct-perfect-fourth model-chart"></div>
