--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#trendChecking2" role="tab" aria-controls="profile"
-             aria-selected="false">Метод Фостера Стьюарта</a>
+             aria-selected="false">Метод Фостера Стюарта</a>
         </li>
       </ul>
       <div class="tab-content">
